<resources>
    <string name="app_name">ItMeans</string>
    <string name="search_go">Search</string>
    <string name="definition_verb_title">Verb</string>
    <string name="definition_noun_title">Noun</string>
    <string name="association_title">Similar words</string>
    <string name="not_found">No results</string>
    <string name="entry_title">Word</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_recents">Recents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_delete_all">Delete All</string>
    <string name="favorites_activity_title">Favorites</string>
    <string name="warning_title">Warning</string>
    <string name="delete_all_favorites_words_message">Do you really want clear all favorites words?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Word</string>
    <string name="concated_recent_words_hint">Recents words...</string>
    <string name="see_all">See all</string>
</resources>
