<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_toolbar_search"
        android:title="@string/search_go"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/action_favorites"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_recents"
        android:icon="@drawable/ic_recent"
        android:title="@string/action_recents"
        app:showAsAction="always"/>
    <!--<item-->
        <!--android:id="@+id/action_edit"-->
        <!--android:title="@string/edit"-->
        <!--android:icon="@drawable/icon_toolbar_edit"-->
        <!--yourapp:showAsAction="ifRoom" />-->
    <!--<item-->
        <!--android:id="@+id/action_micro"-->
        <!--android:title="@string/microphone"-->
        <!--android:icon="@drawable/icon_toolbar_micro"-->
        <!--yourapp:showAsAction="always" />-->
    <!--<item-->
        <!--android:id="@+id/action_remove"-->
        <!--android:title="@string/remove"-->
        <!--android:icon="@drawable/icon_toolbar_remove"-->
        <!--yourapp:showAsAction="always" />-->
</menu>